--- a/.github/workflows/maui-tests.yml
+++ b/.github/workflows/maui-tests.yml
@@ -1,5 +1,5 @@
 name: MAUI Unit Tests
- 
+
 on:
   push:
     branches:
@@ -8,27 +8,52 @@ on:
   pull_request:
     branches:
       - main
- 
+
 jobs:
   test:
-    runs-on: ubuntu-latest  # Of windows-latest/macOS-latest als specifiek platform nodig is
+    runs-on: ubuntu-latest  # gebruik windows-latest als je emulator-tests nodig hebt
+
     steps:
       - name: Haal de repository op
         uses: actions/checkout@v4
- 
+
       - name: Installeer .NET SDK
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'  # Gebruik de juiste versie voor MAUI
- 
+          dotnet-version: '8.0.x'
+
+      - name: Cache NuGet packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
       - name: Installeer MAUI workloads
         run: dotnet workload install maui-android
- 
+
       - name: Herstel afhankelijkheden
         run: dotnet restore
- 
+
       - name: Bouw de applicatie
         run: dotnet build --configuration Release --no-restore
- 
-      - name: Voer unit tests uit
-        run: dotnet test --configuration Release --no-restore --no-build --verbosity normal
+
+      - name: Voer unit tests uit (met TRX logging)
+        run: dotnet test --configuration Release --no-build --no-restore --logger "trx;LogFileName=test_results.trx" --results-directory ./TestResults
+
+      - name: Upload testresultaten als artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: ./TestResults/*.trx
+
+      - name: Rapporteer testresultaten in PR
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: Unit Test Report
+          path: ./TestResults/*.trx
+          reporter: dotnet-trx
+          fail-on-error: false
