Update .gitignore and refactor ViewModels and repository
- Enhanced `.gitignore` with entries for Fody, MAUI, VS Code, test results, and platform-specific outputs.
- Made the `Client` property in `GlobalViewModel` and some other files nullable.
- Updated `LoginViewModel` to include additional namespaces and initialized `loginMessage` to an empty string.
- Refactored `Update` method in `GroceryListRepository` to use `FindIndex` for item updates, improving clarity and functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,21 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# MAUI build cache
+.maui-cache/
+
+# VS Code settings
+.vscode/
+
+# Test results and coverage
+TestResults/
+*.trx
+coverage/
+coverage*.json
+coverage*.xml
+coverage*.info
+
+# Platform-specific build output
+Platforms/*/bin/
+Platforms/*/obj/
